# risc0-curve25519-dalek-source

./: Cargo.toml
curve25519-dalek/: Cargo.toml
curve25519-dalek/src/: constants.rs  edwards.rs  field.rs  scalar.rs
curve25519-dalek/src/backend/serial/: mod.rs
curve25519-dalek/src/backend/serial/curve_models/: mod.rs
curve25519-dalek/src/backend/serial/risc0/: constants.rs  field.rs  mod.rs  scalar.rs
curve25519-dalek/src/backend/serial/scalar_mul/: vartime_double_base.rs
curve25519-dalek/src/backend/serial/u64/: scalar.rs
ed25519-dalek/: Cargo.toml
ed25519-dalek/src/: signature.rs  verifying.rs
ed25519-dalek/tests/: ed25519.rs  validation_criteria.rs
