[workspace]
members = [
    "curve25519-dalek",
    "curve25519-dalek-derive",
    "ed25519-dalek",
    "x25519-dalek"
]
resolver = "2"

[profile.dev]
opt-level = 2

[patch.crates-io.crypto-bigint]
git = "https://github.com/risc0/RustCrypto-crypto-bigint"
tag = "v0.5.5-risczero.0"

[patch.crates-io.sha2]
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.8-risczero.0"
